--- a/qa-dcp.planx-pla.net/manifest.json
+++ b/qa-dcp.planx-pla.net/manifest.json
@@ -7,25 +7,35 @@
     "autodeploy": "yes"
   },
   "versions": {
-    "arborist": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/arborist:2025.05",
-    "aws-es-proxy": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/aws-es-proxy:v1.3.1",
-    "fence": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/fence:2025.05",
-    "indexd": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/indexd:2025.05",
-    "peregrine": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/peregrine:2025.05",
-    "revproxy": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/nginx:2025.05",
-    "sheepdog": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/sheepdog:2025.05",
-    "portal": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/data-portal:2025.05",
-    "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
-    "spark": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/gen3-spark:2025.05",
-    "tube": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/tube:2025.05",
-    "guppy": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/guppy:2025.05",
-    "sower": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/sower:2025.05",
-    "hatchery": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/hatchery:2025.05",
     "ambassador": "quay.io/datawire/ambassador:1.4.2",
-    "wts": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/workspace-token-service:2025.05",
-    "manifestservice": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/manifestservice:2025.05",
-    "ssjdispatcher": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/ssjdispatcher:2025.05",
-    "metadata": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/metadata-service:2025.05"
+    "arborist": "quay.io/cdis/arborist:master",
+    "audit-service": "quay.io/cdis/audit-service:master",
+    "aws-es-proxy": "quay.io/cdis/aws-es-proxy:v1.3.1",
+    "awshelper": "quay.io/cdis/awshelper:master",
+    "fence": "quay.io/cdis/fence:master",
+    "indexd": "quay.io/cdis/indexd:master",
+    "ws-storage": "quay.io/cdis/ws-storage:master",
+    "peregrine": "quay.io/cdis/peregrine:master",
+    "revproxy": "quay.io/cdis/nginx:master",
+    "sheepdog": "quay.io/cdis/sheepdog:master",
+    "portal": "quay.io/cdis/data-portal:master",
+    "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
+    "spark": "quay.io/cdis/gen3-spark:master",
+    "ssjdispatcher": "quay.io/cdis/ssjdispatcher:master",
+    "tube": "quay.io/cdis/tube:master",
+    "manifestservice": "quay.io/cdis/manifestservice:master",
+    "wts": "quay.io/cdis/workspace-token-service:master",
+    "guppy": "quay.io/cdis/guppy:master",
+    "sower": "quay.io/cdis/sower:master",
+    "hatchery": "quay.io/cdis/hatchery:master",
+    "metadata": "quay.io/cdis/metadata-service:master",
+    "dashboard": "quay.io/cdis/gen3-statics:master",
+    "requestor": "quay.io/cdis/requestor:master",
+    "cedar-wrapper": "quay.io/cdis/cedar-wrapper-service:master",
+    "gen3-user-data-library": "quay.io/cdis/gen3-user-data-library:main",
+    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:master",
+    "ohif-viewer": "quay.io/cdis/ohif-viewer:gen3-v3.8.0",
+    "orthanc": "docker.io/osimis/orthanc:master"
   },
   "google": {
     "enabled": "yes"
