--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install gen3utils --upgrade
+          # pip install gen3utils --upgrade
+          pip install git+https://github.com/uc-cdis/gen3utils.git@handle-rate-limit
       
       - name: Remove comments from github-actions
         uses: actions/github-script@v6
