--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -25,8 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # pip install gen3utils --upgrade
-          pip install git+https://github.com/uc-cdis/gen3utils.git@handle-rate-limit
+          pip install gen3utils --upgrade
       
       - name: Remove comments from github-actions
         uses: actions/github-script@v6
